syntax = "proto3";
import "google/protobuf/empty.proto";
package grpc;
option go_package= "main/app/grpc/proto/dex";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/dex/dex.proto (왱구가 안써놓음 지만하려고)
service DexEventService {
    rpc FindDexEvent (DexEventRequest) returns (DexEventResponse) {}
    rpc GetRate (google.protobuf.Empty) returns (RateResponse) {}
  }
  
  message DexEventRequest {
      int64  Id = 1;
  }
  
  message DexEventResponse {
      string Name = 1;
      string Level = 2;
      string Created = 3;
      string Updated = 4;
      bool   IsUsed = 5;
      Detail EventDetail = 6;
  }
  
  message Detail {
      string Define = 1;
      string Outline = 2;
      string Place = 3;
      string Background = 4;
      string ImageUrl = 5;
  }
  
message RateResponse{
    int64 Rate = 1;
}

